Server being finalized

--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -19,7 +19,7 @@
   <body>
 
     <div id="container" class="container">
-        <h1>2021 What Did 2021 Teach You Quiz</h1>
+        <h1>What Did 2021 Teach You Quiz?</h1>
         <div id="scare" class="scarey"></div>
     <div id="questionContainer" class="questionContainer">
     </div>
@@ -36,9 +36,7 @@
       </div>
       <div id="timer"></div>
       <div>
-          <button class="deactivation" onclick=(checkDeactivate())>Deactivate</button>
-          <br />
-          <button class="deactivation" onclick=(scareTimer(2))>second</button>
+          <button class="deactivation" id="deactivate" onclick=(checkDeactivate())>Deactivate</button>
       </div>
       
     </div>
